--- a/ios/Podfile
+++ b/ios/Podfile
@@ -49,6 +49,7 @@ post_install do |installer|
           #  Preprocessor definitions can be found in: https://github.com/Baseflow/flutter-permission-handler/blob/master/permission_handler_apple/ios/Classes/PermissionHandlerEnums.h
           config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
             '$(inherited)',
+            'AUDIO_SESSION_MICROPHONE=0',
 
             ## dart: PermissionGroup.calendar
             # 'PERMISSION_EVENTS=1',
