--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '11.0'
+platform :ios, '12.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -64,7 +64,7 @@ post_install do |installer|
             'PERMISSION_CAMERA=1',
 
             ## dart: PermissionGroup.microphone
-            # 'PERMISSION_MICROPHONE=1',
+            'PERMISSION_MICROPHONE=1',
 
             ## dart: PermissionGroup.speech
             # 'PERMISSION_SPEECH_RECOGNIZER=1',
