--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -50,18 +50,32 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<key>NSMicrophoneUsageDescription</key>
-    <string>... explain why the app uses the microphone here ...</string>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-        <key>NSAllowsArbitraryLoads</key>
-        <true/>
-    </dict>
     <key>NSCameraUsageDescription</key>
 	<string>Used to demonstrate image picker plugin</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Used to capture audio for image picker plugin</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Used to demonstrate image picker plugin</string>
+	<key>UIBackgroundModes</key>
+    <array>
+       <string>fetch</string>
+       <string>remote-notification</string>
+    </array>
+    <key>NSAppleMusicUsageDescription</key>
+    <string>Explain why your app uses music</string>
+    <key>UISupportsDocumentBrowser</key>
+    <true/>
+    <key>LSSupportsOpeningDocumentsInPlace</key>
+    <true/>
+    <key>NSSpeechRecognitionUsageDescription</key>
+    <string>MyApp does not need this permission</string>
+    <key>NSMotionUsageDescription</key>
+    <string>MyApp does not need this permission</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>MyApp does not need this permission</string>
+    <key>NSContactsUsageDescription</key>
+    <string>MyApp does not need this permission</string>
+    <key>NSCalendarsUsageDescription</key>
+    <string>MyApp does not need this permission</string>
 </dict>
 </plist>
