--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   device_info_plus:
   open_file: ^3.3.2
   image_picker: ^1.0.4
+  file_picker: ^6.0.0
+  flutter_sound: ^8.5.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
