--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 BASE_URL='https://chat.ohmidasvn.dev/api/v1';
 BASE_IMAGE_URL='https://chat.ohmidasvn.dev';
+ROCKET_CHAT_SERVER='wss://chat.ohmidasvn.dev/websocket';
