--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   # formatter
   intl: ^0.18.1
   # paging
-  flutter_stream_paging: ^1.0.14
+  flutter_stream_paging: ^1.0.16
   # data structure support
   tuple: ^2.0.2
   # handle IO
@@ -59,6 +59,16 @@ dependencies:
   image_picker: ^1.0.4
   file_picker: ^6.0.0
   flutter_sound: ^8.5.0
+  # share content
+  share_plus: ^7.2.1
+  # Draw SVG
+  flutter_svg: ^2.0.8
+  # provides a WebView widget
+  webview_flutter: ^4.4.1
+  # realtime data
+  socket_io_client: ^2.0.3+1
+  web_socket_channel: ^2.4.0
+
 
 
 
