--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,44 +16,34 @@ jobs:
   build:
     runs-on: macos-13
     steps:
-      - name: Setup Xcode
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: 15.0.1
       - name: Checkout repository
         uses: actions/checkout@v1
-      - name: init flutter action
-        uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          architecture: x64
       - name: Deploy iOS Beta to TestFlight via Fastlane
         env:
-          APP_STORE_CONNECT_TEAM_ID: '${{ secrets.DEVELOPER_APP_ID }}'
-          DEVELOPER_APP_ID: '${{ secrets.DEVELOPER_APP_ID }}'
-          DEVELOPER_APP_IDENTIFIER: '${{ secrets.FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD }}'
-          DEVELOPER_PORTAL_TEAM_ID: '${{ secrets.DEVELOPER_PORTAL_TEAM_ID }}'
-          FASTLANE_APPLE_ID: '${{ secrets.FASTLANE_APPLE_ID }}'
-          FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: '${{ secrets.FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD }}'
-          MATCH_PASSWORD: '${{ secrets.MATCH_PASSWORD }}'
-          GIT_AUTHORIZATION: '${{ secrets.GIT_AUTHORIZATION }}'
-          PROVISIONING_PROFILE_SPECIFIER: '${{ secrets.PROVISIONING_PROFILE_SPECIFIER }}'
-          APPLE_KEY_ID: '${{ secrets.APPLE_KEY_ID }}'
-          APPLE_ISSUER_ID: '${{ secrets.APPLE_ISSUER_ID }}'
-          APPLE_KEY_CONTENT: '${{ secrets.APPLE_KEY_CONTENT }}'
-          CER_GIT_URL: '${{ secrets.CER_GIT_URL }}'
+          APP_STORE_CONNECT_TEAM_ID: ${{ secrets.DEVELOPER_APP_ID }}
+          DEVELOPER_APP_ID: ${{ secrets.DEVELOPER_APP_ID }}
+          DEVELOPER_APP_IDENTIFIER: ${{ secrets.FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD }}
+          DEVELOPER_PORTAL_TEAM_ID: ${{ secrets.DEVELOPER_PORTAL_TEAM_ID }}
+          FASTLANE_APPLE_ID: ${{ secrets.FASTLANE_APPLE_ID }}
+          FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD }}
+          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+          GIT_AUTHORIZATION: ${{ secrets.GIT_AUTHORIZATION }}
+          PROVISIONING_PROFILE_SPECIFIER: ${{ secrets.PROVISIONING_PROFILE_SPECIFIER }}
+          APPLE_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
+          APPLE_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}
+          APPLE_KEY_CONTENT: ${{ secrets.APPLE_KEY_CONTENT }}
+          CER_GIT_URL: ${{ secrets.CER_GIT_URL }}
         run: |
-            echo "::set-output name=APP_STORE_CONNECT_TEAM_ID::APP_STORE_CONNECT_TEAM_ID"
-            echo "::set-output name=DEVELOPER_APP_ID::DEVELOPER_APP_ID"
-            echo "::set-output name=DEVELOPER_APP_IDENTIFIER::DEVELOPER_APP_IDENTIFIER"
-            echo "::set-output name=DEVELOPER_PORTAL_TEAM_ID::DEVELOPER_PORTAL_TEAM_ID"
-            echo "::set-output name=FASTLANE_APPLE_ID::FASTLANE_APPLE_ID"
-            echo "::set-output name=FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD::FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD"
-            echo "::set-output name=MATCH_PASSWORD::MATCH_PASSWORD"
-            echo "::set-output name=GIT_AUTHORIZATION::GIT_AUTHORIZATION"
-            echo "::set-output name=PROVISIONING_PROFILE_SPECIFIER::PROVISIONING_PROFILE_SPECIFIER"
-            echo "::set-output name=APPLE_KEY_ID::APPLE_KEY_ID"
-            echo "::set-output name=APPLE_ISSUER_ID::APPLE_ISSUER_ID"
-            echo "::set-output name=APPLE_KEY_CONTENT::APPLE_KEY_CONTENT"
-            echo "::set-output name=CER_GIT_URL::CER_GIT_URL"
+            echo APP_STORE_CONNECT_TEAM_ID=#{APP_STORE_CONNECT_TEAM_ID} >> $GITHUB_ENV
+            echo DEVELOPER_APP_ID=#{DEVELOPER_APP_ID} >> $GITHUB_ENV
+            echo DEVELOPER_APP_IDENTIFIER=#{DEVELOPER_APP_IDENTIFIER} >> $GITHUB_ENV
+            echo DEVELOPER_PORTAL_TEAM_ID=#{DEVELOPER_PORTAL_TEAM_ID} >> $GITHUB_ENV
+            echo FASTLANE_APPLE_ID=#{FASTLANE_APPLE_ID} >> $GITHUB_ENV
+            echo FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD=#{FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD} >> $GITHUB_ENV
+            echo MATCH_PASSWORD=#{MATCH_PASSWORD} >> $GITHUB_ENV
+            echo GIT_AUTHORIZATION=#{GIT_AUTHORIZATION} >> $GITHUB_ENV
+            echo PROVISIONING_PROFILE_SPECIFIER=#{PROVISIONING_PROFILE_SPECIFIER} >> $GITHUB_ENV
+            echo APPLE_KEY_ID=#{APPLE_KEY_ID} >> $GITHUB_ENV
+            echo APPLE_KEY_CONTENT=#{APPLE_KEY_CONTENT} >> $GITHUB_ENV
+            echo CER_GIT_URL=#{CER_GIT_URL} >> $GITHUB_ENV
             cd ios && fastlane beta
