--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,17 +33,21 @@ jobs:
           APPLE_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}
           APPLE_KEY_CONTENT: ${{ secrets.APPLE_KEY_CONTENT }}
           CER_GIT_URL: ${{ secrets.CER_GIT_URL }}
+          TEMP_KEYCHAIN_USER: ${{ secrets.TEMP_KEYCHAIN_USER }}
+          TEMP_KEYCHAIN_PASSWORD: ${{ secrets.TEMP_KEYCHAIN_PASSWORD }}
         run: |
-            echo APP_STORE_CONNECT_TEAM_ID=#{APP_STORE_CONNECT_TEAM_ID} >> $GITHUB_ENV
-            echo DEVELOPER_APP_ID=#{DEVELOPER_APP_ID} >> $GITHUB_ENV
-            echo DEVELOPER_APP_IDENTIFIER=#{DEVELOPER_APP_IDENTIFIER} >> $GITHUB_ENV
-            echo DEVELOPER_PORTAL_TEAM_ID=#{DEVELOPER_PORTAL_TEAM_ID} >> $GITHUB_ENV
-            echo FASTLANE_APPLE_ID=#{FASTLANE_APPLE_ID} >> $GITHUB_ENV
-            echo FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD=#{FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD} >> $GITHUB_ENV
-            echo MATCH_PASSWORD=#{MATCH_PASSWORD} >> $GITHUB_ENV
-            echo GIT_AUTHORIZATION=#{GIT_AUTHORIZATION} >> $GITHUB_ENV
-            echo PROVISIONING_PROFILE_SPECIFIER=#{PROVISIONING_PROFILE_SPECIFIER} >> $GITHUB_ENV
-            echo APPLE_KEY_ID=#{APPLE_KEY_ID} >> $GITHUB_ENV
-            echo APPLE_KEY_CONTENT=#{APPLE_KEY_CONTENT} >> $GITHUB_ENV
-            echo CER_GIT_URL=#{CER_GIT_URL} >> $GITHUB_ENV
+            echo "APP_STORE_CONNECT_TEAM_ID=#{APP_STORE_CONNECT_TEAM_ID}" >> GITHUB_OUTPUT
+            echo "DEVELOPER_APP_ID=#{DEVELOPER_APP_ID}" >> GITHUB_OUTPUT
+            echo "DEVELOPER_APP_IDENTIFIER=#{DEVELOPER_APP_IDENTIFIER}" >> GITHUB_OUTPUT
+            echo "DEVELOPER_PORTAL_TEAM_ID=#{DEVELOPER_PORTAL_TEAM_ID}" >> GITHUB_OUTPUT
+            echo "FASTLANE_APPLE_ID=#{FASTLANE_APPLE_ID}" >> GITHUB_OUTPUT
+            echo "FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD=#{FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD}" >> GITHUB_OUTPUT
+            echo "MATCH_PASSWORD=#{MATCH_PASSWORD}" >> GITHUB_OUTPUT
+            echo "GIT_AUTHORIZATION=#{GIT_AUTHORIZATION}" >> GITHUB_OUTPUT
+            echo "PROVISIONING_PROFILE_SPECIFIER=#{PROVISIONING_PROFILE_SPECIFIER}" >> GITHUB_OUTPUT
+            echo "APPLE_KEY_ID=#{APPLE_KEY_ID}" >> GITHUB_OUTPUT
+            echo "APPLE_KEY_CONTENT=#{APPLE_KEY_CONTENT}" >> GITHUB_OUTPUT
+            echo "CER_GIT_URL=#{CER_GIT_URL}" >> GITHUB_OUTPUT
+            echo "TEMP_KEYCHAIN_USER=#{TEMP_KEYCHAIN_USER}" >> GITHUB_OUTPUT
+            echo "TEMP_KEYCHAIN_PASSWORD=#{TEMP_KEYCHAIN_PASSWORD}" >> GITHUB_OUTPUT
             cd ios && fastlane beta
