--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,8 +16,17 @@ jobs:
   build:
     runs-on: macos-13
     steps:
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: 15.0.1
       - name: Checkout repository
         uses: actions/checkout@v1
+      - name: init flutter action
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          architecture: x64
       - name: Deploy iOS Beta to TestFlight via Fastlane
         env:
           APP_STORE_CONNECT_TEAM_ID: ${{ secrets.DEVELOPER_APP_ID }}
