--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,7 +15,7 @@ workflows:
           flutter packages pub get
       - name: Install pods
         script: |
-          find . -name "Podfile" -execdir pod install \;
+          find . -name "Podfile" -execdir pod install --repo-update \;
       # - gem install bundler:2.2.27
       - cd ios && bundle install
       - cd ios && bundle exec fastlane beta
